<resources>
    <string name="app_name">Online matka</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_wallet">Wallet</string>


    <string name="menu_home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="menu_profile">Profile</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_rate_chart">Rate Chart</string>
    <string name="menu_history">History</string>
    <string name="menu_live_result">Live_result</string>

    <string name="menu_withraw_history">Withraw History</string>
    <string name="menu_news">News</string>
    <string name="menu_support">Support</string>
    <string name="menu_share">Share</string>

    <string name="menu_about">About</string>
    <string name="menu_rating">Rate</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_exit">Exit</string>
</resources>