<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_live_results"
            android:icon="@drawable/ic_baseline_live_tv_24"
            android:title="@string/menu_live_result" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_sentiment_very_satisfied_24"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_wallet" />

        <item
            android:id="@+id/nav_rate_chart"
            android:icon="@drawable/ic_baseline_table_chart_24"
            android:title="@string/menu_rate_chart" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_insert_chart_outlined_24"
            android:title="@string/menu_history" />


        <item
            android:id="@+id/nav_withdraw_history"
            android:icon="@drawable/ic_baseline_table_chart_24"
            android:title="@string/menu_withraw_history" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_access_time_24"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/menu_support" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/menu_share" />


        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/menu_rating" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_baseline_privacy_tip_24"
            android:title="@string/menu_privacy_policy" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_exit" />
    </group>
</menu>